--- a/front.css
+++ b/front.css
@@ -1,12 +1,8 @@
-body
-{
+body {
   color: blue;
-
-
 }
 
-p
-{
+p {
   width: 50%;
   margin: auto;
 }
@@ -17,5 +13,11 @@ p
 }
 .formulaire               {display:inline-block;}
 .formulaire .champ       {width:50%; height:35px;}
-.formulaire .bouton       { background-image: url("valider.png");background-repeat: no-repeat;width: 35px;height: 35px;padding: 0; }
+.formulaire .bouton       {
+   background-image:url('valider.png');
+   background-repeat: no-repeat;
+   width: 35px;
+   height: 35px;
+   padding: 0;
+}
 /*je n'arrive pas à mettre l'image "valider.png" dans le bouton.../*
