Un cours un peu plus jolie

--- a/cours.css
+++ b/cours.css
@@ -1,15 +1,50 @@
+
+a {
+    text-decoration: none;
+}
 .head {
-    background-color: green;
     color: white;
-    margin: 5px;
-    padding: 10px;
-    text-align:center;
-    font-family:verdana;
+    font-family:Trebuchet MS;
+    overflow: auto;
+}
+
+.Menu {
+    position: relative;
+    display: inline-block;
+    border-radius: 10px;
+    width: 14%;
+    padding:auto;
+    height: inherit;
+}
+
+.title {
+    float: right;
+    display: inline-block;
+    border-radius: 10px;
+    background-color: rgb(0,153,255);
+    text-align: center;
+    width:84%;
+    height: inherit;
 }
 
 .cours {
+    border-radius: 10px;
     font-family: Trebuchet MS;
     padding: 10px;
-    margin: 5px;
-    background-color: rgb(230,230,230);
+    margin: 5px 0px;
+    background-color:rgb(225,245,255);
+}
+
+.to_test {
+    border-radius: 10px;
+    font-family: Trebuchet MS;
+    padding: 10px;
+    margin: 5px 0px;
+    background-color: rgb(0,153,255);
+    text-align: center;
+    font-size: 200%;
+    color: white;
+}
+.to_test:hover {
+    background-color:rgb(51, 204, 51);
 }
